--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -28,4 +28,4 @@
     </tbody>
 </table>
 
-<a href="@Url.Action("Create", "Book")">Add New Book</a>
+<a href="@Url.Action("Create", "Book")">Add New Bossok</a>
