--- a/ASI.Basecode.WebApp/Views/Book/Create.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Create.cshtml
@@ -11,9 +11,11 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="AuthorName">Author:</label>
-        <input asp-for="AuthorName" class="form-control" />
-        <span asp-validation-for="AuthorName" class="text-danger"></span>
+        <label asp-for="AuthorId">Author:</label>
+        <select asp-for="AuthorId" asp-items="ViewBag.AuthorList" class="form-control">
+            <option value="">-- Select Author --</option>
+        </select>
+        <span asp-validation-for="AuthorId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
