--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<ASI.Basecode.WebApp.Models.BookViewModel>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
 <h1>Books</h1>
 
 <table class="table">
@@ -19,14 +21,82 @@
                 <td>@book.Name</td>
                 <td>@book.AuthorName</td>
                 <td>
-                    <a href="@Url.Action("Details", "Book", new { id = book.Id })">Details</a> |
-                    @* <a href="@Url.Action("Edit", "Book", new { id = book.Id })">Edit</a> | *@
-                    <a asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">Edit</a> |
-                    <a href="@Url.Action("Delete", "Book", new { id = book.Id })">Delete</a>
+                    @* <a href="@Url.Action("Details", "Book", new { id = book.Id })">Details</a> |
+                    <a onClick="#exampleModal"  href="@Url.Action("Edit", "Book", new { id = book.Id })">Edit</a> |
+                    * <a asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">Edit</a> | *
+                    <a href="@Url.Action("Delete", "Book", new { id = book.Id })">Delete</a> *@
+                    <button type="button" class="btn btn-primary"  >
+                        Details
+                    </button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" onClick="#exampleModal" data-bs-target="#exampleModal">
+                        Edit
+                    </button>
+                    <button type="button" class="btn btn-primary"  >
+                        Delete
+                    </button>
+                    
                 </td>
             </tr>
         }
     </tbody>
 </table>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Book</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="update-form">
+                    <div class="mb-3">
+                        <input type="hidden" name="bookId" />
+                        <label class="form-label">Title</label>
+                        <input type="text" class="form-control" id="bookTitle" name="bookTitle">
+                        @* <div id="titleHelp" class="form-text">Book Title.</div> *@
+                    </div>
+                    <div class="row">
+                        <div class="mb-3 col-sm">
+                            <label class="form-label">Author</label>
+                            <input type="text" class="form-control" id="bookAuthor" name="bookAuthor">
+
+                        </div>
+                        <div class="mb-3 col-sm">
+                            <label class="form-label">ISBN</label>
+                            <input type="number" class="form-control" id="bookIsbn" name="bookIsbn">
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="mb-3 col-sm">
+                            <label class="form-label">Language</label>
+                            <input type="text" class="form-control" id="bookLanguage" name="bookLanguage">
+
+                        </div>
+                        <div class="mb-3 col-sm">
+                            <label class="form-label">PageCount</label>
+                            <input type="number" class="form-control" id="bookPageCount" name="bookPageCount">
+
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Published Date</label>
+                        <input type="date" class="form-control" id="bookPublishedDate" name="bookPublishedDate">
+                    </div>
+
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary" value="Update">Update Book</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <a href="@Url.Action("Create", "Book")">Add New Book</a>
+ 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
