--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -25,13 +25,13 @@
                     <a onClick="#exampleModal"  href="@Url.Action("Edit", "Book", new { id = book.Id })">Edit</a> |
                     * <a asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">Edit</a> | *
                     <a href="@Url.Action("Delete", "Book", new { id = book.Id })">Delete</a> *@
-                    <button type="button" class="btn btn-primary"  >
+                    <button href="@Url.Action("Details", "Book", new { id = book.Id })" type="button" class="btn btn-primary">
                         Details
                     </button>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" onClick="#exampleModal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn btn-primary bg-success" data-bs-toggle="modal" onClick="#exampleModal" data-bs-target="#exampleModal">
                         Edit
                     </button>
-                    <button type="button" class="btn btn-primary"  >
+                    <button href="@Url.Action("Delete", "Book", new { id = book.Id })" type="button" class="btn btn-primary bg-danger">
                         Delete
                     </button>
                     
@@ -96,7 +96,9 @@
     </div>
 </div>
 
-<a href="@Url.Action("Create", "Book")">Add New Book</a>
- 
+@* <a href="@Url.Action("Create", "Book")">Add New Book</a> *@
+<button href="@Url.Action("Create", "Book")" type="button" class="btn btn-primary">
+    Add New Book
+</button>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
