--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<ASI.Basecode.WebApp.Models.BookViewModel>
 
+<!-- Stylesheet Link for Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 <h1>Books</h1>
@@ -21,20 +22,9 @@
                 <td>@book.Name</td>
                 <td>@book.AuthorName</td>
                 <td>
-                    @* <a href="@Url.Action("Details", "Book", new { id = book.Id })">Details</a> |
-                    <a onClick="#exampleModal"  href="@Url.Action("Edit", "Book", new { id = book.Id })">Edit</a> |
-                    * <a asp-controller="Book" asp-action="Edit" asp-route-id="@book.Id">Edit</a> | *
-                    <a href="@Url.Action("Delete", "Book", new { id = book.Id })">Delete</a> *@
-                    <button href="@Url.Action("Details", "Book", new { id = book.Id })" type="button" class="btn btn-primary">
-                        Details
-                    </button>
-                    <button type="button" class="btn btn-primary bg-success" data-bs-toggle="modal" onClick="#exampleModal" data-bs-target="#exampleModal">
-                        Edit
-                    </button>
-                    <button href="@Url.Action("Delete", "Book", new { id = book.Id })" type="button" class="btn btn-primary bg-danger">
-                        Delete
-                    </button>
-                    
+                    <a href="@Url.Action("Details", "Book", new { id = book.Id })" class="btn btn-primary">Details</a>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Edit</button>
+                    <button href="@Url.Action("Delete", "Book", new { id = book.Id })" type="button" class="btn btn-danger">Delete</button>
                 </td>
             </tr>
         }
@@ -50,42 +40,35 @@
             </div>
             <div class="modal-body">
                 <form id="update-form">
+                    <input type="hidden" name="bookId" />
                     <div class="mb-3">
-                        <input type="hidden" name="bookId" />
                         <label class="form-label">Title</label>
                         <input type="text" class="form-control" id="bookTitle" name="bookTitle">
-                        @* <div id="titleHelp" class="form-text">Book Title.</div> *@
                     </div>
                     <div class="row">
                         <div class="mb-3 col-sm">
                             <label class="form-label">Author</label>
                             <input type="text" class="form-control" id="bookAuthor" name="bookAuthor">
-
                         </div>
                         <div class="mb-3 col-sm">
                             <label class="form-label">ISBN</label>
                             <input type="number" class="form-control" id="bookIsbn" name="bookIsbn">
-
                         </div>
                     </div>
                     <div class="row">
                         <div class="mb-3 col-sm">
                             <label class="form-label">Language</label>
                             <input type="text" class="form-control" id="bookLanguage" name="bookLanguage">
-
                         </div>
                         <div class="mb-3 col-sm">
                             <label class="form-label">PageCount</label>
                             <input type="number" class="form-control" id="bookPageCount" name="bookPageCount">
-
                         </div>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Published Date</label>
                         <input type="date" class="form-control" id="bookPublishedDate" name="bookPublishedDate">
                     </div>
-
-
                 </form>
             </div>
             <div class="modal-footer">
@@ -96,9 +79,7 @@
     </div>
 </div>
 
-@* <a href="@Url.Action("Create", "Book")">Add New Book</a> *@
-<button href="@Url.Action("Create", "Book")" type="button" class="btn btn-primary">
-    Add New Book
-</button>
+<a href="@Url.Action("Create", "Book")" class="btn btn-primary">Add New Book</a>
 
+<!-- JavaScript Link for Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
