--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model IEnumerable<ASI.Basecode.WebApp.Models.BookViewModel>
 
-<!-- Stylesheet Link for Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 <h1>Books</h1>
@@ -18,20 +17,26 @@
         @foreach (var book in Model)
         {
             <tr>
-                <td>@book.Id</td>
-                <td>@book.Name</td>
-                <td>@book.AuthorName</td>
+                <td>
+                    @book.Id
+                </td>
+                <td>
+                    @book.Name
+                </td>
+                <td>
+                    @book.AuthorName
+                </td>
                 <td>
                     <a href="@Url.Action("Details", "Book", new { id = book.Id })" class="btn btn-primary">Details</a>
                     <a href="@Url.Action("Edit", "Book", new { id = book.Id })" class="btn btn-primary">Edit</a>
-                    <button href="@Url.Action("Delete", "Book", new { id = book.Id })" type="button" class="btn btn-danger">Delete</button>
+                    <button data-url="@Url.Action("Delete", "Book", new { id = book.Id })" type="button" class="btn btn-danger">Delete</button>
                 </td>
             </tr>
         }
+
     </tbody>
 </table>
 
 <a href="@Url.Action("Create", "Book")" class="btn btn-primary">Add New Book</a>
 
-<!-- JavaScript Link for Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
