--- a/ASI.Basecode.WebApp/Views/Book/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Index.cshtml
@@ -28,4 +28,24 @@
     </tbody>
 </table>
 
-<a href="@Url.Action("Create", "Book")">Add New Book</a>
+<a href="@Url.Action("Create", "Book")" class="btn btn-primary">Add New Book</a>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+@* JQuery Script for deletion (calls delete method in controller as http) *@
+<script>
+    $(document).ready(function () {
+        $(".btn-danger").click(function () {
+            var url = $(this).data("url");
+            if (confirm("Are you sure you want to delete this book?")) {
+                $.post(url, function (data) {
+                    location.reload();
+                }).fail(function () {
+                    alert('Unable to delete.');
+                });
+            }
+        });
+    });
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
