moved business logic to service layer

--- a/ASI.Basecode.WebApp/Views/Book/Details.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Details.cshtml
@@ -1,4 +1,4 @@
-@model ASI.Basecode.WebApp.Models.BookViewModel
+@model ASI.Basecode.Services.Models.BookViewModel
 
 <style>
     /* Add CSS styles here */
