--- a/ASI.Basecode.WebApp/Views/Account/Login.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Login.cshtml
@@ -1,62 +1,323 @@
 ﻿@model LoginViewModel
 @using static ASI.Basecode.Resources.Views.Screen
-@section styles {
-    <link rel="stylesheet" href="~/css/login.css" />
-}
+<style>
+    body {}
+
+    :root {
+        --primary-color: #FF7519;
+        --secondary-color: #B64110;
+        --dark-p-color: #331204;
+    }
+
+    #hero-section-img-login {
+        /*-webkit-transform: scaleX(-1);*/
+        /*transform: scaleX(-1);*/
+        margin: 0px -7%;
+        left: 0 !important;
+        position: relative;
+        object-fit: cover;
+        height: 30em !important;
+        width: -webkit-fill-available;
+    }
+
+    .text-link {
+        text-decoration: underline;
+        color: blue;
+        cursor: pointer;
+    }
+
+    .text-link:hover {
+        color: darkblue;
+    }
+
+    /*.hero-section-gradient {
+    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), url('https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&q=80&w=1770&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    width: 80%;
+    height: 400px;
+    background-size: cover;
+    color: white;
+    padding: 20px;
+}*/
+
+    .modal-container {
+        position: absolute;
+        top: 10em !important;
+        right: 100px;
+        width: 25%;
+    }
+
+    .modal-dialog {
+        margin: 0;
+    }
+
+    .modal-header-auth {
+        display: block;
+    }
+
+    .modal-content {
+        padding: 1em;
+    }
+
+    #login-form {
+        padding: 1em 0 1em 0;
+    }
+
+    .asterisk {
+        font-size: 3ch;
+        color: red;
+        position: absolute;
+        margin-left: 5px;
+    }
+
+
+
+
+    .form-control {
+        display: unset !important;
+        /*width: 90% !important;*/
+    }
+
+    .login-btn {
+        width: 100%;
+    }
+
+    h1#exampleModalLabel {
+        color: var(--secondary-color);
+        text-align: center;
+        padding: 0px 0px 30px 0px;
+        font-size: 30px !important;
+        font-weight: 400;
+    }
+
+    #hero-section-title {
+        position: absolute;
+        font-size: 10em;
+        padding-top: 80px;
+        color: white;
+        z-index: 99;
+    }
+
+    #hero-section-title[b-zsa0up3u66] {
+        width: 7em;
+        position: absolute;
+        font-weight: 700;
+        font-size: 6em;
+        letter-spacing: -4px;
+        padding: 200px 0px 0px 100px;
+        color: white;
+        z-index: 99;
+    }
+
+
+    .about-us-section {
+        margin: 100px 0px;
+    }
+
+    .about-us-content {
+        padding: 50px 100px;
+    }
+
+    .about-title {
+        color: var(--primary-color);
+        font-size: 3.5em;
+        width: 400px;
+        font-weight: 800;
+        text-align: left;
+        padding-bottom: 50px;
+    }
+
+    .about-description {
+        text-align: left;
+        padding-right: 50px;
+    }
+
+    .about-btn {
+        margin-top: 25px;
+        width: 50%;
+        font-size: 25px;
+    }
+
+    .about-col-left {
+        text-align: left;
+    }
+    }
+</style>
+
 @{
-    ViewBag.LoginView = true;
-    ViewData["Title"] = "Login Page";
+    ViewData["Title"] = "Login";
 }
-<div>
-    @Html.AntiForgeryToken()
-</div>
-<div class="container py-5" style="display:flex; align-content:center;height:calc(100vh - 64px)">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-xl-10">
-            <div class="card rounded-3 text-black">
-                <div class="row g-0 w-1000px">
-                    <div class="col-lg-6">
-                        <div class="card-body p-md-5 mx-md-4">
-                            <div class="text-center">
-                                <img src="~/img/asi-logo-invert.svg"
-                                     style="width: 185px;" alt="logo">
+
+
+@*
+https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?auto=format&fit=crop&q=80&w=1770&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+*@
+
+
+<section class="navbar-section">
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                @* <img alt="Rectangle1I104"
+
+                alt="Logo" width="200" height="50" class="d-inline-block align-text-top" /> *@
+                <img src="https://aheioqhobo.cloudimg.io/v7/_playground-bucket-v2.teleporthq.io_/39527209-b5b2-4967-9a91-51f7e21b11aa/60c5ddba-3014-4f65-94ce-6fa0f4cbae36?org_if_sml=16713"
+                    alt="Logo" width="250" height="50" class="d-inline-block align-text-top">
+            </a>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            <a class="navbar-brand profile" href="#">
+                <img style="border-radius:50%;" src="https://media.tenor.com/5RJv6g10MFIAAAAM/funny-chad.gifg"
+                    alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+            </a>
+        </div>
+    </nav>
+</section>
+
+<section class="hero-section">
+    <h1 id="hero-section-title">A Reader's Bestfriend.</h1>
+    @* <div class="hero-section-gradient" style=" width: 100px; height: 100px; "></div>/> *@
+    <img class="hero-section-img" id="hero-section-img-login" src="/images/hero-image.png" />
+</section>
+
+<section>
+    <div>
+        <link href="~/css/styles.css" rel="stylesheet" />
+        <div class="modal-container modal-login-position">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <h1 class="modal-title modal-title-auth fs-5" id="exampleModalLabel">Sign In</h1>
+                        <form method="post" action="/Account/Login" asp-antiforgery="true">
+                            <div class="mb-3">
+                                <label for="UserId" class="form-label">Email</label>
+                                <input type="text" id="UserId" class="form-control" asp-for="UserId"
+                                    placeholder="Enter userid">
+                                <span asp-validation-for="UserId" class="text-danger"></span>
                             </div>
-                            <form method="post" action="/Account/Login" id="loginForm">
-                                <div class="form-outline mb-4">
-                                    <label class="form-label" for="form2Example11">@UserId</label>
-                                    <input type="text" id="form2Example11" class="form-control"
-                                           asp-for="UserId" placeholder="Enter userid" />
-                                    <span asp-validation-for="UserId" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline mb-4">
-                                    <label class="form-label" for="form2Example22">@Password</label>
-                                    <input type="password" id="form2Example22" class="form-control"
-                                           asp-for="Password" placeholder="Enter password" />
-                                    <span asp-validation-for="Password" class="text-danger"></span>
-                                </div>
-                                <div class="text-center pt-1 mb-5 pb-1 d-flex flex-column align-items-center">
-                                    <button class="btn btn-primary btn-block login-btn gradient-custom-2 mb-3" type="submit">
-                                        @Login
-                                    </button>
-                                    <div>
-                                        <a class="text-muted" href="#!">@ForgotPass</a>
-                                    </div>
-                                </div>
-                                <div class="d-flex align-items-center justify-content-center pb-4">
-                                    <p class="mb-0 me-2 mr-1">@DontHaveAcc</p>
-                                    <a asp-controller="Account" asp-action="Register" class="btn btn-outline-danger">@CreateNew</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 d-flex">
-                        <img style="width:400px"src="~/img/LiveIT.png" />
+                            <div class="mb-3">
+                                <label for="Password" class="form-label">Password</label>
+                                <input type="password" id="Password" class="form-control" asp-for="Password"
+                                    placeholder="Enter password">
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3 form-link">
+                                <a class="redirect-forgot-password text-link" style="color:dimgray;"
+                                    asp-controller="Account" asp-action="ForgotPassword">Forgot your password?</a>
+                            </div>
+                            <div class="mb-3 form-link">
+                                <span style="color:dimgray;">No account?
+                                    <a class="redirect-sign-up text-link" asp-controller="Account"
+                                        asp-action="Register">Sign up</a>
+                                </span>
+                            </div>
+                            <button type="submit" class="btn btn-primary login-btn">Sign In</button> <a
+                                asp-controller="Account" asp-action="Register" class="btn btn-outline-danger"></a>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
+
+<section class="about-us-section">
+    <div class="container text-center about-us-content">
+        <div class="row">
+            <div class="col-6 about-col-left align-self-start">
+                <h1 class="about-title">
+                    Over 100,000 copies!
+                </h1>
+                <p class="about-description">
+                    Say goodbye to generic book recommendations! Skooby employs
+                    advanced algorithms to understand your reading preferences.
+                    By analyzing your past reads and ratings, the app suggests books
+                    tailored to your taste, ensuring you never run out of captivating reads.
+                </p>
+
+                <p class="about-description">
+                    Unlock a world of literary adventures today! Join Skooby, the ultimate
+                    book review app that keeps readers like you coming back for more.
+                    Dive into curated reviews, connect with a vibrant book-loving
+                    community, and discover your next favorite book. Don't miss out on
+                    the magic of Skooby – your literary journey begins here.
+                    Click 'Sign Up' now and start your reading adventure!
+                </p>
+                <button type="submit" class="btn btn-primary login-btn about-btn" value="Update">Sign In</button>
+
+            </div>
+            <div class="col-6 about-col-right align-self-end">
+                <img src="/images/about-us.png" />
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="skooby-footer-content text-center text-lg-start text-white">
+
+    <div class="container p-4 pb-0">
+        <section class="">
+            <div class="row">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+
+                    <img class="skooby-logo" src="/images/logo1.png" />
+                    <img class="logo-back1" src="/images/logo-back1.png" />
+                </div>
+
+                <hr class="w-100 clearfix d-md-none" />
+
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+
+                </div>
+
+                <hr class="w-100 clearfix d-md-none" />
+
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h6 class="text-uppercase mb-4 font-weight-bold">
+                        Useful links
+                    </h6>
+                    <p>
+                        <a class="text-white">Your Account</a>
+                    </p>
+                    <p>
+                        <a class="text-white">Become an Affiliate</a>
+                    </p>
+
+                    <p>
+                        <a class="text-white">Help</a>
+                    </p>
+                </div>
+
+                <hr class="w-100 clearfix d-md-none" />
+                @* <img class="footer-bg-design" src="/images/bg-image-footer.png" /> *@
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                    <p><i class="fas fa-home mr-3"></i> CICCT USJ-R, Basak-Pardo, Cebu City, Cebu, PH</p>
+                    <p><i class="fas fa-envelope mr-3"></i> g6_alliance@gmail.com</p>
+                    <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                    <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+
+
+                </div>
+
+            </div>
+
+        </section>
+        <hr class="my-3">
+
+        <section class="p-3 pt-0">
+            <div class="row d-flex align-items-center">
+                <div class="col-md-7 col-lg-8 text-center text-md-start">
+                    <div class="p-3">
+                        Copyright © 2023. Alliance Group 6. All Rights Reserved.
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </div>
+</footer>
 
 @section scripts {
     <script>
