implemented global header and footer

--- a/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Header.cshtml
@@ -2,10 +2,14 @@
 @inject IHttpContextAccessor HttpContextAccessor
 <header class="@((ViewBag.LoginView == true) ? "hide-navbar" : "")">
     <div class="logosec hover-pointer">
-        <img src="~/img/asi-logo-invert.svg"
+        <img src="~/img/logo2.png"
              style="width: 185px;" alt="logo"
              onclick="window.location.href = '@Url.Action("Index", "Home")';">
     </div>
+    <form class="d-flex" role="search">
+        <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success search-button" type="submit">Search</button>
+    </form>
     <div class="logosec">
         @HttpContextAccessor.HttpContext.Session.GetString("UserName")
         <div class="mr-20 hover-pointer" style="position: relative">
