--- a/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
+++ b/ASI.Basecode.WebApp/Views/Shared/_Layout.cshtml
@@ -20,9 +20,81 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="border-top footer text-muted">
+@*     <footer class="border-top footer text-muted">
         <div class="container">
             @Copyright
+        </div>
+    </footer> *@
+
+    <footer class="skooby-footer-content text-center text-lg-start text-white">
+
+        <div class="container p-4 pb-0">
+            <section class="footer-content">
+                <div class="row">
+                    <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+
+                        <img class="skooby-logo" src="/img/logo1.png"
+                             onclick="window.location.href = '@Url.Action("Index", "Home")';"
+                        />
+                        <img class="logo-back1" src="/img/logo-back1.png" />
+                    </div>
+
+                    <hr class="w-100 clearfix d-md-none" />
+
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    </div>
+
+                    <hr class="w-100 clearfix d-md-none" />
+
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">
+                            Useful links
+                        </h6>
+                        <p>
+                            <a class="text-white">Your Account</a>
+                        </p>
+                        <p>
+                            <a class="text-white">Become an Affiliate</a>
+                        </p>
+
+                        <p>
+                            <a class="text-white">Help</a>
+                        </p>
+                    </div>
+
+                    <hr class="w-100 clearfix d-md-none" />
+                    @* <img class="footer-bg-design" src="/images/bg-image-footer.png" /> *@
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                        <p><i class="fas fa-home mr-3"></i> CICCT USJ-R, Basak-Pardo, Cebu City, Cebu, PH</p>
+                        <p><i class="fas fa-envelope mr-3"></i> g6_alliance@gmail.com</p>
+                        <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                        <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+
+
+                    </div>
+
+                </div>
+
+            </section>
+            <hr class="my-3">
+
+            <div class="container">
+                @Copyright
+            </div>
+
+@*             <section class="p-3 pt-0">
+                <div class="row d-flex align-items-center">
+                    <div class="col-md-7 col-lg-8 text-center text-md-start">
+                        @* <div class="p-3">
+                            Copyright © 2023. Alliance Group 6.  All Rights Reserved.
+
+                        </div> 
+                        
+                    </div>
+
+                </div>
+            </section> *@
         </div>
     </footer>
 
