--- a/ASI.Basecode.WebApp/Views/Home/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Home/Index.cshtml
@@ -6,3 +6,22 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<section style="background-color:magenta;">
+    <div style="background-color:lime;">
+        <h4>Art</h4>
+    </div>
+</section>
+
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col-8" style="background-color:magenta;">
+                1 of 2
+            </div>
+            <div class="col-4" style="background-color:lime;">
+                2 of 2
+            </div>
+        </div>
+    </div>
+</section>
