--- a/ASI.Basecode.WebApp/Views/Account/Login.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Login.cshtml
@@ -39,7 +39,7 @@
                                         @Login
                                     </button>
                                     <div>
-                                        <a class="text-muted" href="#!">@ForgotPass</a>
+                                        <a asp-controller="Account" asp-action="ForgotPass" class="text-muted" >Forgot Password</a>
                                     </div>
                                 </div>
                                 <div class="d-flex align-items-center justify-content-center pb-4">
