--- a/ASI.Basecode.WebApp/Views/Book/Create.cshtml
+++ b/ASI.Basecode.WebApp/Views/Book/Create.cshtml
@@ -11,11 +11,19 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="AuthorId">Author:</label>
-        <select asp-for="AuthorId" asp-items="ViewBag.AuthorList" class="form-control">
-            <option value="">-- Select Author --</option>
+        <label for="AuthorIds">Authors:</label>
+        <select asp-for="AuthorIds" asp-items="ViewBag.AuthorList" class="form-control" multiple="multiple">
+            <option value="">-- Select Authors --</option>
         </select>
-        <span asp-validation-for="AuthorId" class="text-danger"></span>
+        <span asp-validation-for="AuthorIds" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label for="GenreIds">Genres:</label>
+        <select asp-for="GenreIds" asp-items="ViewBag.GenreList" class="form-control" multiple="multiple">
+            <option value="">-- Select Genres --</option>
+        </select>
+        <span asp-validation-for="GenreIds" class="text-danger"></span>
     </div>
 
     <div class="form-group">
