--- a/ASI.Basecode.WebApp/Views/Account/Login.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Login.cshtml
@@ -1,62 +1,96 @@
 ﻿@model LoginViewModel
 @using static ASI.Basecode.Resources.Views.Screen
 @section styles {
-    <link rel="stylesheet" href="~/css/login.css" />
+    <link rel="stylesheet" href="/css/login.css" />
 }
 @{
     ViewBag.LoginView = true;
     ViewData["Title"] = "Login Page";
 } 
-<div>
-    @Html.AntiForgeryToken()
-</div>
-<div class="container py-5" style="display:flex; align-content:center;height:calc(100vh - 64px)">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-xl-10">
-            <div class="card rounded-3 text-black">
-                <div class="row g-0 w-1000px">
-                    <div class="col-lg-6">
-                        <div class="card-body p-md-5 mx-md-4">
-                            <div class="text-center">
-                                <img src="~/img/asi-logo-invert.svg"
-                                     style="width: 185px;" alt="logo">
+
+<section class="hero-section">
+    <h1 id="hero-section-title">A Reader's Bestfriend.</h1>
+    <img class="hero-section-img" id="hero-section-img-login" src="/img/hero-image.png" />
+</section>
+
+<section>
+    <div>
+        <div>
+            @Html.AntiForgeryToken()
+        </div> 
+        <div class="modal-container modal-login-position">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <h1 class="modal-title modal-title-auth fs-5" id="exampleModalLabel">Sign In</h1>
+                        <form method="post" action="/Account/Login" asp-antiforgery="true">
+                            <div class="mb-3">
+                                <label for="UserId" class="form-label">@UserId</label>
+                                <input type="text" id="UserId" class="form-control" asp-for="UserId"
+                                       placeholder="Enter userid">
+                                <span asp-validation-for="UserId" class="text-danger"></span>
                             </div>
-                            <form method="post" action="/Account/Login" id="loginForm">
-                                <div class="form-outline mb-4">
-                                    <label class="form-label" for="form2Example11">@UserId</label>
-                                    <input type="text" id="form2Example11" class="form-control"
-                                           asp-for="UserId" placeholder="Enter userid" />
-                                    <span asp-validation-for="UserId" class="text-danger"></span>
-                                </div>
-                                <div class="form-outline mb-4">
-                                    <label class="form-label" for="form2Example22">@Password</label>
-                                    <input type="password" id="form2Example22" class="form-control"
-                                           asp-for="Password" placeholder="Enter password" />
-                                    <span asp-validation-for="Password" class="text-danger"></span>
-                                </div>
-                                <div class="text-center pt-1 mb-5 pb-1 d-flex flex-column align-items-center">
-                                    <button class="btn btn-primary btn-block login-btn gradient-custom-2 mb-3" type="submit">
-                                        @Login
-                                    </button>
-                                    <div>
-                                        <a asp-controller="Account" asp-action="ForgotPass" class="text-muted" >Forgot Password</a>
-                                    </div>
-                                </div>
-                                <div class="d-flex align-items-center justify-content-center pb-4">
-                                    <p class="mb-0 me-2 mr-1">@DontHaveAcc</p>
-                                    <a asp-controller="Account" asp-action="Register" class="btn btn-outline-danger">@CreateNew</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 d-flex">
-                        <img style="width:400px"src="~/img/LiveIT.png" />
+                            <div class="mb-3">
+                                <label for="Password" class="form-label">Password</label>
+                                <input type="password" id="Password" class="form-control" asp-for="Password"
+                                       placeholder="Enter password">
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3 form-link">
+                                <a class="redirect-forgot-password text-link" style="color:dimgray;"
+                                   asp-controller="Account" asp-action="ForgotPassword">Forgot your password?</a>
+                            </div>
+                            <div class="mb-3 form-link">
+                                <span style="color:dimgray;">
+                                    No account?
+                                    <a class="redirect-sign-up text-link" asp-controller="Account"
+                                       asp-action="Register">Sign up</a>
+                                </span>
+                            </div>
+                            <button type="submit" class="btn btn-primary login-btn">Sign In</button>
+                          
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
+    </div> 
+</section>
+
+<section class="about-us-section">
+    <div class="container text-center about-us-content">
+        <div class="row">
+            <div class="col-6 about-col-left align-self-start">
+                <h1 class="about-title">
+                    Over 100,000 copies!
+                </h1>
+                <p class="about-description">
+                    Say goodbye to generic book recommendations! Skooby employs
+                    advanced algorithms to understand your reading preferences.
+                    By analyzing your past reads and ratings, the app suggests books
+                    tailored to your taste, ensuring you never run out of captivating reads.
+                </p>
+
+                <p class="about-description">
+                    Unlock a world of literary adventures today! Join Skooby, the ultimate
+                    book review app that keeps readers like you coming back for more.
+                    Dive into curated reviews, connect with a vibrant book-loving
+                    community, and discover your next favorite book. Don't miss out on
+                    the magic of Skooby – your literary journey begins here.
+                    Click 'Sign Up' now and start your reading adventure!
+                </p>
+                <button type="submit" class="redirect-sign-up btn btn-primary login-btn about-btn"  asp-controller="Account"
+                        asp-action="Register">
+                    Sign In
+                </button> 
+
+            </div>
+            <div class="col-6 about-col-right align-self-end">
+                <img src="/img/about-us.png" />
+            </div>
+        </div>
     </div>
-</div>
+</section>
 
 @section scripts {
     <script>
