--- a/ASI.Basecode.WebApp/Views/Account/ForgotPass.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/ForgotPass.cshtml
@@ -1,4 +1,6 @@
-
+@section styles {
+    <link rel="stylesheet" href="~/css/login.css" />
+}
 @{
 
     ViewData["Title"] = "ForgotPass";
@@ -12,9 +14,9 @@
 
 
 <section class="hero-section">
-    <link href="~/css/styles.css" rel="stylesheet" />
+    <link href="~/css/login.css" rel="stylesheet" />
 
-    <section>
+    <div>
         <link href="~/css/forgotpassword.css" rel="stylesheet" />
 
         <div class="card">
@@ -30,7 +32,7 @@
             <br>
 
         </div>
-    </section>
+    </div>
 </section>
 
 
