--- a/ASI.Basecode.WebApp/Views/Account/Register.cshtml
+++ b/ASI.Basecode.WebApp/Views/Account/Register.cshtml
@@ -1,56 +1,65 @@
 ﻿@using ASI.Basecode.Services.ServiceModels
 @model UserViewModel
+@section styles {
+    <link rel="stylesheet" href="~/css/login.css" />
+}
 @{
     ViewBag.LoginView = true;
     ViewData["Title"] = "Register Page";
 }
-@section styles {
-    <link rel="stylesheet" href="~/css/login.css" />
-}
-<div class="container py-5 h-100 register-box">
-    <div class="row d-flex justify-content-center align-items-center h-100">
+
+<div class="container py-5 h-100 register-box" >
+    <div class="row d-flex justify-content-center align-items-center h-100" >
         <div class="col-xl-10">
-            <div class="card rounded-3 text-black">
+            <div class="card rounded-3 text-black border-0" style="min-width: 558px; min-height: 589px; box-shadow: 0 4px 4px rgba(0,0,0,0.25); margin-top: 96px;">
                 <div class="row g-0">
                     <div class="card-body p-md-5 mx-md-4">
 
-                        <div class="text-center">
-                            <img src="https://www.alliance.com.ph/images/asi-logo-invert.svg"
-                                 style="width: 185px;" alt="logo">
+                        <div class="text-center" style="padding-bottom: 39px">
+                            <h3 style="color: #B64110; line-height: 48px; font-size: 32px;">Create a Scooby Account</h3>
                         </div>
 
-                        <form method="post" action="/Account/Register">
+                        <form method="post" action="/Account/Register" style=" margin-left: 20px; margin-right: 20px;">
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="userId">UserId</label>
+                               <!-- <label class="form-label" for="userId">UserId</label> -->
                                 <input type="text" id="userId" class="form-control"
-                                       asp-for="UserId" placeholder="Enter userid" />
+                                       asp-for="UserId" placeholder="Enter userid" 
+                                       style="background-color: #E7E7E7; border-radius: 10px; " />
                                 <span asp-validation-for="UserId" class="text-danger"></span>
                             </div>
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="name">Name</label>
+                                <!--  <label class="form-label" for="name">Name</label> -->
                                 <input type="text" id="name" class="form-control"
-                                       asp-for="Name" placeholder="Enter name" />
+                                       asp-for="Name" placeholder="Enter name"
+                                       style="background-color: #E7E7E7; border-radius: 10px; " />
                                 <span asp-validation-for="Name" class="text-danger"></span>
                             </div>
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="password">Password</label>
+                                <!--<label class="form-label" for="password">Password</label>-->
                                 <input type="password" id="password" class="form-control"
-                                       asp-for="Password" placeholder="Enter password" />
+                                       asp-for="Password" placeholder="Enter password" 
+                                       style="background-color: #E7E7E7; border-radius: 10px; " />
                                 <span asp-validation-for="Password" class="text-danger"></span>
                             </div>
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="confirmpassword">Confirm Password</label>
+                                <!-- <label class="form-label" for="confirmpassword">Confirm Password</label>-->
                                 <input type="password" id="confirmpassword" class="form-control" 
-                                       asp-for="ConfirmPassword" placeholder="Confirm Password" />
+                                       asp-for="ConfirmPassword" placeholder="Confirm Password" 
+                                       style="background-color: #E7E7E7; border-radius: 10px;" />
                                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                             </div>
-                            <div class="text-center pt-1 mb-5 pb-1 d-flex flex-column align-items-center">
-                                <button class="btn btn-primary btn-block login-btn gradient-custom-2 mb-3" type="submit">
+                            <div class="text-right">
+                                <span style="color: #818181; font-size: 14px;">Already a member?</span>
+                                <a asp-controller="Account" asp-action="Login" style="color: #FF7519; font-size: 14px;">
+                                    Sign in
+                                </a>
+                            </div>
+
+                            <div class="text-center pt-1 pb-1 d-flex flex-column align-items-center" style="margin-top: 30px">
+                                <button class="btn btn-primary btn-block login-btn mb-3" style="border-radius: 20px; background-color: #FF7519; font-size: 20px;" type="submit">
                                     Register
                                 </button>
-                                <a asp-controller="Account" asp-action="Login">
-                                    &#8592 Back
-                                </a>
+                               
                             </div>
                         </form>
                     </div>
